traditional approach with init state duplicated, not in InitCtx